--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
 
 <body>
 <h1>hello</h1>
-<h2>two test</h2>
+<h2>tree test</h2>
 	
 	<link rel="stylesheet" href="css/main.min.css">
 	<script src="js/scripts.min.js"></script>
