--- a/app/index.html
+++ b/app/index.html
@@ -29,11 +29,12 @@
 </head>
 
 <body>
-<h1>hello</h1>
-<h2>tree test</h2>
+
 	
 	<link rel="stylesheet" href="css/main.min.css">
+	<link rel="stylesheet" href="css/owl.carousel.css">
 	<script src="js/scripts.min.js"></script>
-
+	<script src="js/owl.carousel.min.js"></script>
+<img src="" alt="">
 </body>
 </html>
