--- a/app/index.html
+++ b/app/index.html
@@ -30,9 +30,18 @@
 
 <body>
 
+
+<div class="owl-carousel">
+	<div class="item">
+		<div style="background-image: url(../img/homepage/background-home.png)" class="img-responsive"></div>
+	</div>
+</div>
+
+
 	
 	<link rel="stylesheet" href="css/main.min.css">
 	<link rel="stylesheet" href="css/owl.carousel.css">
+	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<script src="js/scripts.min.js"></script>
 	<script src="js/owl.carousel.min.js"></script>
 <img src="" alt="">
