again end work 06

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
 <body>
 
 
-<div class="owl-carousel">
+<div class="owl-carousel-background">
 	<div class="item">
 		<div style="background-image: url(../img/homepage/background-home.png)" class="img-responsive"></div>
 	</div>
