--- a/app/index.html
+++ b/app/index.html
@@ -31,19 +31,81 @@
 <body>
 
 
-<div class="owl-carousel-background">
-	<div class="item">
-		<div style="background-image: url(../img/homepage/background-home.png)" class="img-responsive"></div>
+	<div class="owl-carousel" id="top-background-carousel">
+		<div class="item">
+			<div style="background-image: url(../img/homepage/background-home.png)" class="img-responsive">
+			<div class="opacity-background"></div>
+			</div>
+		</div>
 	</div>
-</div>
 
-
+	<section class="top-section">
+		
+		<div class="top-contact">
+			<div class="container">
+				<div class="float-right">
+					<ul>
+						<li>T.+971  000 000 000</li>
+						<li>|</li>
+						<li>Skype call or text us</li>
+						<li>|</li>
+						<li>
+							<ul class="social-icons">
+								<li><a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+								<li><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+								<li><a href=""><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+								<li><a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+								<li><a href=""><i class="fa fa-behance" aria-hidden="true"></i></a></li>
+								<li><a href=""><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+							</ul>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<header>
+			<div class="container">
+				<div class="col-md-2">
+				<a href="">
+					<img src="img/logo.png" alt="brandfactory">
+					</a>
+				</div>
+				<div class="col-md-10">
+					<nav>
+						<ul>
+							<li><a href="">smm</a></li>
+							<li><a href="">pcc</a></li>
+							<li><a href="">seo</a></li>
+							<li><a href="">web</a></li>
+							<li><a href="">design</a></li>
+							<li><a href="">video</a></li>
+							<li><a href="">project</a></li>
+							<li><a href="">blog</a></li>
+							<li><a href="">contact</a></li>
+							<li><a href="">Lorem</a></li>
+						</ul>
+					</nav>
+				</div>
+			</div>
+		</header>
+		
+		<div class="welcome-block">
+			<p class="title">Create your digital future with usy</p>
+			<form action="">
+				<input placeholder="name" type="text">
+				<input type="text">
+				<input type="text">
+				<input type="text">
+				<button>Lorem</button>
+			</form>
+		</div>
+	</section>
 	
 	<link rel="stylesheet" href="css/main.min.css">
 	<link rel="stylesheet" href="css/owl.carousel.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<script src="js/scripts.min.js"></script>
 	<script src="js/owl.carousel.min.js"></script>
-<img src="" alt="">
+	<img src="" alt="">
 </body>
 </html>
