--- a/app/index.html
+++ b/app/index.html
@@ -29,9 +29,14 @@
 </head>
 
 <body>
-
-
+<div class="main">
+	<section>
 	<div class="owl-carousel" id="top-background-carousel">
+		<div class="item">
+			<div style="background-image: url(../img/homepage/background-home.png)" class="img-responsive">
+			<div class="opacity-background"></div>
+			</div>
+		</div>
 		<div class="item">
 			<div style="background-image: url(../img/homepage/background-home.png)" class="img-responsive">
 			<div class="opacity-background"></div>
@@ -39,7 +44,7 @@
 		</div>
 	</div>
 
-	<section class="top-section">
+	<div class="top-section">
 		
 		<div class="top-contact">
 			<div class="container">
@@ -65,6 +70,7 @@
 		</div>
 		<header>
 			<div class="container">
+			<div class="row">
 				<div class="col-md-2">
 				<a href="">
 					<img src="img/logo.png" alt="brandfactory">
@@ -87,25 +93,182 @@
 					</nav>
 				</div>
 			</div>
+			</div>
 		</header>
 		
 		<div class="welcome-block">
-			<p class="title">Create your digital future with usy</p>
+		<div class="container">
+			<p class="title">Create your <br> digital <br> future with usy</p>
 			<form action="">
-				<input placeholder="name" type="text">
+				<div class="wraper-input">
+				<input placeholder="Name" type="text">
 				<input type="text">
 				<input type="text">
 				<input type="text">
+				</div>
 				<button>Lorem</button>
 			</form>
 		</div>
+		</div>
+	</div>
 	</section>
-	
+	<section class="services-section">
+		<div class="tickets-name">
+		<div class="name-page">01 <div class="vertical-text">services</div></div>
+		</div>
+		<div class="services">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-8">
+						<div class="row color-blocks">
+							<div class="col-md-4"><div class="item"><p>smm</p></div></div>
+							<div class="col-md-4"><div class="item"><p>web</p></div></div>
+							<div class="col-md-4"><div class="item"><p>seo</p></div></div>
+							<div class="col-md-4"><div class="item"><p>ppc</p></div></div>
+							<div class="col-md-4"><div class="item"><p>design</p></div></div>
+							<div class="col-md-4"><div class="item"><p>video</p></div></div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="serm-audi"><div class="blue-line">Serm <span>Audit</span></div></div>
+						<p class="title">Lorem ipsum is simply.</p>
+						<p class="small-title">Lorem Ipsum</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta eos deleniti, hic expedita laudantium minus nisi ipsum labore fugit eius quo beatae consequuntur veritatis optio sed, harum iste amet quisquam praesentium animi nobis id.</p>
+						<button>Lorem</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="callback-field">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-8">
+						<p>Call us today at <span>(+971) 4 430 5977</span></p>
+					</div>
+					<div class="col-md-4">
+						<input type="email" placeholder="E-mail">
+						<button>Lorem ipsum</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="project-section">
+		<div class="tickets-name">
+		<div class="name-page">02 <div class="vertical-text">project</div></div>
+		</div>
+		<div class="container">
+			<p class="title">Lorem Ipsum</p>
+			<div class="blue-line"></div>
+			<div class="smal-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum sed ipsam est soluta, magnam cupiditate iure, pariatur voluptatibus assumenda similique sit suscipit quod tempore, blanditiis.</div>
+			<div class="row project-photo">
+				<div class="col-md-4"><img src="" alt=""></div>
+				<div class="col-md-4"><img src="" alt=""></div>
+				<div class="col-md-4"><img src="" alt=""></div>
+				<div class="col-md-4"><img src="" alt=""></div>
+				<div class="col-md-4"><img src="" alt=""></div>
+			</div>
+			<button>view all projects</button>
+		</div>
+		<div class="callback-field">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-8">
+						<p>Call us today at <span>(+971) 4 430 5977</span></p>
+					</div>
+					<div class="col-md-4">
+						<input type="email" placeholder="E-mail">
+						<button>Lorem ipsum</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="animate-element">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8">
+					<p class="title"> Lorem ipsum is simply.</p>
+					<div class="blue-line"></div>
+					<div class="row">
+						<div class="col-md-3"><div class="title-column">Lorem ipsum</div></div>
+						<div class="col-md-9">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore magnam provident consequatur hic sunt ea, itaque delectus, eius iste quidem ex ipsum modi architecto perferendis minus consequuntur suscipit vero molestias pariatur autem facilis nobis at earum voluptatum iusto? Adipisci aperiam nisi beatae, est laborum sed.</div>
+					</div>
+					<div class="row">
+						<div class="col-md-3"><div class="title-column">Lorem ipsum</div></div>
+						<div class="col-md-9">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore magnam provident consequatur hic sunt ea, itaque delectus, eius iste quidem ex ipsum modi architecto perferendis minus consequuntur suscipit vero molestias pariatur autem facilis nobis at earum voluptatum iusto? Adipisci aperiam nisi beatae, est laborum sed.</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="field-for-animation">
+						<img src="" alt="">
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="certificates-section">
+		<div class="tickets-name">
+		<div class="name-page">03 <div class="vertical-text">certificates</div></div>
+		</div>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6">
+					<div class="title">Lorem ipsum is simply.</div>
+					<div class="small-title">Lorem ipsum</div>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo quae dolore, itaque porro nisi quaerat officia dolor animi laboriosam tempore architecto. Magnam harum commodi animi ipsum, recusandae, nam atque dicta et impedit laudantium. Fugiat iusto hic blanditiis, laboriosam suscipit voluptatum.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint itaque delectus atque, temporibus. Illum earum placeat laborum sapiente optio ad saepe voluptas iusto, quam molestias maxime aliquid aperiam laudantium perspiciatis molestiae ullam, hic adipisci dolor?</p>
+					<input type="email" placeholder="E-mail">
+						<button>Lorem ipsum</button>
+				</div>
+				<div class="col-md-6">
+					<img src="" alt="">
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="teams-section">
+		<div class="tickets-name">
+		<div class="name-page">04 <div class="vertical-text">teams</div></div>
+		</div>
+		<div class="container">
+			<div class="title">Lorem ipsum</div>
+			<div class="blue-line"></div>
+			<p class="small-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex illo debitis eligendi ducimus! Error.</p>
+			<div class="owl-carousel" id="teams-carousel">
+		<div class="item">
+			<div style="background-image: url(../img/homepage/background-home.png)" class="img-responsive">
+			<div class="opacity-background"></div>
+			</div>
+		</div>
+		<div class="item">
+			<div style="background-image: url(../img/homepage/background-home.png)" class="img-responsive">
+			<div class="opacity-background"></div>
+			</div>
+		</div>
+		<div class="item">
+			<div style="background-image: url(../img/homepage/background-home.png)" class="img-responsive">
+			<div class="opacity-background"></div>
+			</div>
+		</div>
+		<div class="item">
+			<div style="background-image: url(../img/homepage/background-home.png)" class="img-responsive">
+			<div class="opacity-background"></div>
+			</div>
+		</div>
+	</div>
+	<button>Lorem</button>
+	<div class="gray-line"><div class="blue-line"></div></div>
+		</div>
+	</section>
+	</div>
 	<link rel="stylesheet" href="css/main.min.css">
 	<link rel="stylesheet" href="css/owl.carousel.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/onepage-scroll.css">
 	<script src="js/scripts.min.js"></script>
 	<script src="js/owl.carousel.min.js"></script>
+	<script src="js/jquery.onepage-scroll.js"></script>
 	<img src="" alt="">
 </body>
 </html>
